--- a/src/app/components/explore/explore.component.html
+++ b/src/app/components/explore/explore.component.html
@@ -10,7 +10,7 @@
       <mat-card-subtitle>{{restaurant.address}}</mat-card-subtitle>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>RESERVAR</button>
+      <button mat-button [routerLink]="['booking', restaurant.id]">RESERVAR</button>
     </mat-card-actions>
   </mat-card>
 </div>
