--- a/src/app/components/cancel-booking/cancel-booking.component.html
+++ b/src/app/components/cancel-booking/cancel-booking.component.html
@@ -13,8 +13,8 @@
         <div class="col-sm-1 text-right">
             <button class="btn pull-right" [disabled]="!codeReservation" (click)="sendCancel()" type="button" mat-raised-button>Enviar</button>
         </div>
-
-
-
+    </div>
+    <div>
+        <h3>{{state}}</h3>
     </div>
 </div>
