--- a/src/app/components/booking/booking.component.scss
+++ b/src/app/components/booking/booking.component.scss
@@ -1,15 +1,40 @@
-.restaurantImage{
-    height: 25vw;
-    background-repeat: no-repeat;
+.restaurantBackground{
+    height: 95%;
     background-size: cover;
     background-position: center;
     min-height: 630px;
+    width: 100%;
+    background-attachment: fixed;
+}
+
+.restaurantImage{
+    height: 70vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 .booking-form {
     min-width: 150px;
     max-width: 500px;
     width: 100%;
 }
+.p40 {
+    padding: 40px
+}
+.pTop50 {
+    padding-top: 50px
+}
 mat-form-field{
     width: 100%;
 }
+
+@media only screen and (max-width: 767px)
+{
+.container
+{
+  overflow-x: auto;
+}
+.restaurantBackground {
+    height: 180%;
+}
+} 
