--- a/src/app/components/booking/booking-form/booking-form.component.html
+++ b/src/app/components/booking/booking-form/booking-form.component.html
@@ -29,6 +29,7 @@
           </mat-form-field> 
     </div>
     <div class="text-right">
-        <button type="submit" mat-button color="primary" [disabled]="!bookingForm.valid">Enviar Reserva</button>
+        <button type="submit" mat-button color="primary" [disabled]="!bookingForm.valid">Reservar</button>
+        <button (click)="payBooking()" mat-button color="secundary" [disabled]="!bookingForm.valid">Reservar y pagar</button>
     </div>
 </form>
