--- a/src/app/components/booking/booking-form/booking-form.component.html
+++ b/src/app/components/booking/booking-form/booking-form.component.html
@@ -1,4 +1,4 @@
-<form class="booking-form" [formGroup]="bookingForm" (ngSubmit)="sendBooking()">    
+<form class="booking-form" [formGroup]="bookingForm">    
     <h1>Realiza tu reserva</h1>
     <div>
         <mat-form-field >
@@ -29,7 +29,7 @@
           </mat-form-field> 
     </div>
     <div class="text-right">
-        <button type="submit" mat-button color="primary" [disabled]="!bookingForm.valid">Reservar</button>
+        <button (click)="sendBooking()" type="submit" mat-button color="primary" [disabled]="!bookingForm.valid">Reservar</button>
         <button (click)="payBooking()" mat-button color="secundary" [disabled]="!bookingForm.valid">Reservar y pagar</button>
     </div>
 </form>
