--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -1,19 +1,24 @@
-<mat-card class="p40" *ngIf="info?.code">
+<mat-card class="p40" *ngIf="booked?.locator">
     <mat-horizontal-stepper>
-        <mat-step label="Pagar">
-            Content 2
-            {{info.code}}
+        <mat-step label="Pagar" [stepControl]="stripeTest" [editable]="false">
             <form novalidate (ngSubmit)="buy()" [formGroup]="stripeTest">
-                <input type="text" formControlName="name" placeholder="Jane Doe">
+                <input type="text" formControlName="name" placeholder="Nombre y apellido">
                 <ngx-stripe-card [options]="cardOptions" [elementsOptions]="elementsOptions"></ngx-stripe-card>
-                <button type="submit">
-                  BUY
-                </button>
-              </form>
+                <button type="submit" mat-button matStepperNext color="primary">Siguiente</button>
+            </form>
         </mat-step>
-        <mat-step label="Resumen">
-            Content 2
-            {{info.booking.name}}
+        <mat-step label="Resumen" [editable]="false">
+            <div>
+                <h1>Datos de pago</h1>
+                <h3>Nombre: {{booked.name}}</h3>
+                <h3>Coste: {{booked.price}} </h3>
+                <h3>Código de reserva: {{booked.locator}}</h3>
+            </div>
+            <button (click)="cancel()" mat-button matStepperNext color="secundary">Cancelar</button>
+            <button (click)="confirm()" mat-button matStepperNext color="primary">Confirmar</button>
+        </mat-step>
+        <mat-step label="Resultado" [editable]="false">
+            <h1>{{successMessage}}</h1>
         </mat-step>
     </mat-horizontal-stepper>
 </mat-card>
